   * Fix not being able to close corrupted file dialog (bug #13764, #14058)
   * Improve display order of unit healing (patch #1343)
   * Fix the new-widgets addon list dialog
   * Add fallback scrollbars if a window doesn't fit (bug #13180)
   * Switch to the new MP lobby
   * Fix a NULL pointer deferring in the hover code
 * WML engine:
   * Added two array element lookup macros, LOOKUP_INDEX and LOOKUP_VALUE.
 * Miscellaneous and bugfixes:
   * Using a hotkey to reload during an attack no longer disables the mouse
     (http://www.wesnoth.org/forum/viewtopic.php?f=4&t=27616)
   * Removed some unused Drake macros from animation_utils
   * Add recruitment anims for the Sky and Hurricane Drakes

Version 1.7.7:
 * AI:
   * Filtering of allowed attackers/defenders in 'attacks' aspect.
   * Fix a serious enough bug in default ai targeting. The bug caused the AI,
     in certain situations, to make weird shuffle-doing-nothing moves and not
     seek enemies or their villages
   * Optimize AI targeting phase.
 * Language and i18n:
   * New translations: Shavian
   * Updated translations: Czech, Dutch, Finnish, Estonian, German, Hungarian,
     Italian, Lithuanian, Russian, Serbian, Slovak, Spanish.
   * Fix a broken markup in the Italian translation (bug #14506)
 * Multiplayer:
   * Updated map: The Manzivan Traps
 * Units:
   * Removed Elder Wose and Shock Trooper from random_leader of the default era.
   * Removed Ancient Wose and Iron Mauler from random_leader of the AoH era.
   * New animation WML and macros for the Drakes
   * Increased the XP required to advance for the Orcish Assassin from 30 to 34.
   * Changed the cold resistance of the naga line from -20% to 0%.
 * User interface:
   * Enabled the new event handler by default now
   * Allow markup in a campaign description (bug #14435)
   * Escape no longer closes the new title screen
   * In recall dialog, use different color and brightness for XP and level