@@ -20,7 +20,8 @@
 		[image]
 			x = {GROOVE_LEFT}
 			y = 0
-			w = "(width - {GROOVE_LEFT} - {GROOVE_RIGHT})"
+			w = "(if(width - {GROOVE_LEFT} - {GROOVE_RIGHT} < 0
+					, 0, width - {GROOVE_LEFT} - {GROOVE_RIGHT}))"
 			h = 0
 			stretch = true
 			name = "buttons/scrollgroove{IMAGE_MIDDLE}-horizontal.png"
@@ -47,7 +48,9 @@
 		[image]
 			x = "(positioner_offset + {POSITIONER_LEFT})"
 			y = 0
-			w = "(positioner_length - {POSITIONER_LEFT} - {POSITIONER_RIGHT})"
+			w = "(
+if(positioner_length - {POSITIONER_LEFT} - {POSITIONER_RIGHT} < 0
+		, 0, positioner_length - {POSITIONER_LEFT} - {POSITIONER_RIGHT}))"
 			stretch = true
 			name = "buttons/scrollhorizontal{IMAGE_MIDDLE}{IMAGE_SUFFIX}"
 		[/image]
