@@ -41,7 +41,7 @@
 					x = 0
 					y = 5
 					w = "(width)"
-					h = "(height - 14)"
+					h = "(if(height < 14, 0, height - 14))"
 					name = "dialogs/" +  {_GUI_BASE_NAME} + "-background.png"
 				[/image]
 
