@@ -18,8 +18,8 @@
 	[rectangle]
 		x = 1
 		y = 1
-		w = "(width - 2)"
-		h = "(height - 2)"
+		w = "(if(width < 2, 0, width - 2))"
+		h = "(if(height < 2, 0, height - 2))"
 
 		border_thickness = 1
 		border_colour = {COLOUR}
