@@ -8,7 +8,7 @@
 	[text]
 		x = {X_OFFSET}
 		y = {GUI__TEXT_VERTICALLY_CENTRED}
-		w = "(width - {X_OFFSET})"
+		w = "(if(width < {X_OFFSET}, 0, width - {X_OFFSET}))"
 		h =  "(text_height)"
 		font_size = {FONT_SIZE}
 		colour = {FONT_COLOUR}
