@@ -19,9 +19,9 @@
 	[text]
 		x = 3
 		y = {GUI__TEXT_VERTICALLY_CENTRED}
-		w = "(width - 6)"
+		w = "(if(width < 6, 0, width - 6))"
 		h =  "(text_height)"
-		maximum_width = "(width - 6)"
+		maximum_width = "(if(width < 6, 0, width - 6))"
 		font_size = {FONT_SIZE}
 		colour = {FONT_COLOUR}
 		text = "(text)"
